<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/navigation_all"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_all" />-->

    <item
        android:id="@+id/navigation_android"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_android" />

    <item
        android:id="@+id/navigation_ios"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_ios" />
    <item
        android:id="@+id/navigation_restvideo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_restvideo" />
    <item
        android:id="@+id/navigation_font"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_font" />
    <item
        android:id="@+id/navigation_Expanding_resources"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_Expanding_resources" />
    <!--<item-->
        <!--android:id="@+id/navigation_welfare"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_welfare" />-->

</menu>
